--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -45,6 +45,8 @@ extends:
   - plugin:jest/recommended
 
 rules:
+  '@typescript-eslint/no-explicit-any': off
+  '@typescript-eslint/no-unused-vars': off
   camelcase: off
   eslint-comments/no-use: off
   eslint-comments/no-unused-disable: off
