--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Get GitHub App Token
         id: token
-        uses: actions/create-github-app-token@v1
+        uses: actions/create-github-app-token@main
         with:
           app-id: ${{ secrets.ISSUEOPS_APP_ID }}
           private-key: ${{ secrets.ISSUEOPS_APP_PEM_FILE }}
