--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   validate:
-    name: Validate Request
+    name: Process Issue Open/Edit
     runs-on: ubuntu-latest
 
     if: contains(github.event.issue.labels.*.name, 'gh-intermediate-class')
