--- a/.github/workflows/process-issue-closed.yml
+++ b/.github/workflows/process-issue-closed.yml
@@ -16,7 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     if: |
-      github.event.issue.state == 'closed'
+      contains(github.event.issue.labels.*.name, 'gh-intermediate-class') &&
+      contains(github.event.issue.labels.*.name, 'provisioned')
 
     steps:
       - name: Get GitHub App Token
