--- a/.github/workflows/process-issue-expiration.yml
+++ b/.github/workflows/process-issue-expiration.yml
@@ -4,6 +4,7 @@ name: Process Issue Expiration
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch: {}
 
 permissions:
   contents: write
