Add checkout step

--- a/.github/workflows/process-issue-expiration.yml
+++ b/.github/workflows/process-issue-expiration.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
       - name: Get GitHub App Token
         id: token
         uses: actions/create-github-app-token@v1
