--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -19,6 +19,10 @@ jobs:
     if: contains(github.event.issue.labels.*.name, 'gh-intermediate-class')
 
     steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
       - name: Get GitHub App Token
         id: token
         uses: actions/create-github-app-token@v1
