--- a/.github/workflows/process-issue-comment.yml
+++ b/.github/workflows/process-issue-comment.yml
@@ -27,6 +27,10 @@ jobs:
       contains(github.event.issue.labels.*.name, 'provisioned')
 
     steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
       - name: Get GitHub App Token
         id: token
         uses: actions/create-github-app-token@v1
