Update instructors list

--- a/instructors.yml
+++ b/instructors.yml
@@ -25,8 +25,7 @@ instructors:
   - dhruvg20
   - digimangos
   - dimmykumont
-  - DivyaGhai
-  - entitlements
+  - digha_microsoft
   - enyil
   - evgenyrahman
   - garnertb
