Update instructors list

--- a/instructors.yml
+++ b/instructors.yml
@@ -25,7 +25,7 @@ instructors:
   - dhruvg20
   - digimangos
   - dimmykumont
-  - digha_microsoft
+  - DivyaGhai
   - enyil
   - evgenyrahman
   - garnertb
