--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "allowJs": true,
     "noEmit": true
   },
   "exclude": ["dist", "node_modules"],
@@ -10,6 +11,7 @@
     "__mocks__",
     "__tests__",
     "src",
+    "eslint.config.mjs",
     "jest.config.ts",
     "rollup.config.ts"
   ]
